stylesheet.css
* {
    margin: 0;
    border: 0;
}
header {
    text-align: left;
    text-indent: 40px;
    background-color: #202020;
    font-family: monospace;
    color: white;
    position: fixed;
    top: 0;
    left: 0;
    padding: 10px;
    width: 100%;
    opacity: 0;
    box-shadow 0px 2px black;
    transition: opacity 1s; 
    z-index: 3;
}
body {
    background-color: #282828;
}

.overlay {
    z-index: 3;
    position: absolute;
    height: 300%;
    width: 0%;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity 1s;
    overflow: hidden;
    background: rgba(0,0,0,.7);
}
/* sidenav menu */
.menu {
    height: 100%;
    width: 0; /*changes in js*/
    opacity: 0; /*changes in js*/
    position: fixed; /*does not move*/
    z-index: 5; /*stay at top*/
    top: 0;
    left: 0;
    background-color: #202020;
    overflow: hidden; /*disable horizontal scroll*/
    -webkit-transition: width 2s;
    transition: opacity 1s;
    transition: width 1s;
    padding-top: 1px;
    text-align: center;
    font-size: 30px;
}

/* open button */
.open-button {
    position: fixed;
    color: white;
    top: 0;
    left: 0px;
    padding: 10px;
    transition: opacity .5s;
    z-index: 4;
}

/* sidenav links */
.menu a {
    display: block;
    text-decoration: none;
    color: white;
    padding-top: 5px;
    
}

/* Close button */
.menu .closebtn {
    color: white;
    position: absolute;
    top: 0;
}

/*Title header of page*/
.page-header {
    position: relative;
    color: white;
    text-align: center;
    font-size: 300%;
    height: 500px;
}

/*Header with background*/
.page-header-title {
    z-index: 2;
    top: 200px;
    position: relative;
}

/*background*/
.page-header-background {
    z-index: 1;
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    position: absolute;
    box-shadow: 0px 1px 10px;
}

/*page content*/
.page-content {
    padding: 5%;
    color: white;
}

.page-about {
    font-size: 200%;
    padding-bottom: 5%;
}

/*body of the page*/
.page-info {
    font-size: 150%;
}

/*pic of me*/
.page-pic{
    width: 75%;
    height: 75%;
}

/*Video demos*/
.page-video {
    width: 75%;
    height: 75%;
}

/*resume link*/
.resume {
    font-size: 200%;
}

